Order Fetch with Store